@@ -52,6 +52,8 @@ Trunk (unreleased changes)
   HCAT-63. RPM package integration with Hadoop (khorgath via hashutosh)
 
   IMPROVEMENTS
+  HCAT-184. Optionally do not generate forrest docs (traviscrawford via hashutosh)
+
   HCAT-187. HCatalog release missing Hive builtins (traviscrawford via hashutosh)
 
   HCAT-186. Downgrade ivy to 2.1.0 (currently 2.2.0) per HIVE-2580 (traviscrawford via hashutosh)
